src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_OwnerId__c</fullName>
        <formula>Campaign.OwnerId</formula>
        <label>Campaign OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT(Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_OwnerId__c</fullName>
        <formula>Contact.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact OwnerId</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Created_By_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By: Email</label>
        <type>Text</type>
    </fields>
</CustomObject>